--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -652,9 +652,11 @@ $light-green: #f0f5f1; // Light green background
       left: 0 !important;
 
       &.show {
-        display: block;
+        display: block !important;
         max-height: 1000px;
         transition: max-height 0.5s ease-in;
+        opacity: 1;
+        visibility: visible;
       }
 
       &:before {
